Fixing some alignment issues

--- a/src/components/DownloadSection.module.css
+++ b/src/components/DownloadSection.module.css
@@ -37,6 +37,7 @@
   color: var(--ifm-color-emphasis-600);
   font-size: 1rem;
   line-height: 1.5;
+  min-height: 1.5rem;
 }
 
 .toggleButton {
